--- a/Concepts/1. Programming, DSA/2. Data Structures.md
+++ b/Concepts/1. Programming, DSA/2. Data Structures.md
@@ -115,14 +115,366 @@ print(arr[1][2])  # Output: 6
 ### Row Major implementation of 2D Array (Default Method)
 In row-major order, a 2D array is stored row by row in contiguous memory. Elements in the same row are stored next to each other.
 ![[Pasted image 20241026195344.png]]
+#### Row Major Implementation of a 2D Array
+
+**Formula for Address Calculation:**
+
+```
+Address of a[i][j] = B + W * [(U2 - L2 + 1) * (i - L1) + (j - L2)]
+```
+
+Address of array **a**:
+$$
+a[i][j] = B + W * [(U2 - L2 + 1) * (i - L1) + (j - L2)]
+$$
+
+**Where:**
+- **B** = Base address of the array
+- **W** = Size of each element (in bytes)
+- **L1** = Lower bound of rows
+- **U1** = Upper bound of rows
+- **L2** = Lower bound of columns
+- **U2** = Upper bound of columns
+- **(U2 - L2 + 1)** = Number of columns in the array
+- **(i - L1)** = Number of rows before row `i`
+- **(j - L2)** = Number of elements before column `j` in the current row
+
+**Explanation:**
+- The address of an element `a[i][j]` is calculated based on the base address, the size of each element, and the relative positions of row `i` and column `j` from their respective lower bounds.
+- The calculation involves determining how far the element is from the beginning of the array, considering it in a row-wise order.
+
+**Example:**
+
+Consider a 2D array `a` with:
+- Base address (B) = 1000
+- Element size (W) = 4 bytes
+- Row index bounds: `L1 = 1`, `U1 = 3`
+- Column index bounds: `L2 = 1`, `U2 = 4`
+
+Find the address of `a[2][3]`:
+
+1. **Number of Columns (U2 - L2 + 1)** = `4 - 1 + 1 = 4`
+2. **Rows before `i = 2`**: `(i - L1) = 2 - 1 = 1`
+3. **Elements before `j = 3` in the current row**: `(j - L2) = 3 - 1 = 2`
+
+**Address Calculation:**
+```
+Address of a[2][3] = B + W * [(4) * (1) + (2)]
+                   = 1000 + 4 * (4 + 2)
+                   = 1000 + 4 * 6
+                   = 1000 + 24
+                   = 1024
+```
+
+**Address of `a[2][3]` = 1024**
+
 ### Column Major Implementation of 2D Array
 In column-major order, a 2D array is stored column by column in contiguous memory. Elements in the same column are stored next to each other.
 ![[Pasted image 20241026195329.png]]
+#### Column Major Implementation of a 2D Array
+
+**Note:** Just change this part from Row-Major (U2 - L2 + 1) to (U1 - L1 + 1) and get the Column-Major Implementation.
+
+**Formula for Address Calculation:**
+
+```
+Address of a[i][j] = B + W * [(U1 - L1 + 1) * (j - L2) + (i - L1)]
+```
+
+Address of array **a**:
+$$
+a[i][j] = B + W * [(U1 - L1 + 1) * (j - L2) + (i - L1)]
+$$
+
+**Where:**
+- **B** = Base address of the array
+- **W** = Size of each element (in bytes)
+- **L1** = Lower bound of rows
+- **U1** = Upper bound of rows
+- **L2** = Lower bound of columns
+- **U2** = Upper bound of columns
+- **(U1 - L1 + 1)** = Number of rows in the array
+- **(j - L2)** = Number of columns before column `j`
+- **(i - L1)** = Number of elements before row `i` in the current column
+
+**Explanation:**
+- The address of an element `a[i][j]` is calculated based on the base address, the size of each element, and the relative positions of column `j` and row `i` from their respective lower bounds.
+- The calculation involves determining how far the element is from the beginning of the array, considering it in a column-wise order.
+
+**Example:**
+
+Consider a 2D array `a` with:
+- Base address (B) = 1000
+- Element size (W) = 4 bytes
+- Row index bounds: `L1 = 1`, `U1 = 3`
+- Column index bounds: `L2 = 1`, `U2 = 4`
+
+Find the address of `a[2][3]`:
+
+1. **Number of Rows (U1 - L1 + 1)** = `3 - 1 + 1 = 3`
+2. **Columns before `j = 3`**: `(j - L2) = 3 - 1 = 2`
+3. **Elements before `i = 2` in the current column**: `(i - L1) = 2 - 1 = 1`
+
+**Address Calculation:**
+```
+Address of a[2][3] = B + W * [(3) * (2) + (1)]
+                   = 1000 + 4 * (6 + 1)
+                   = 1000 + 4 * 7
+                   = 1000 + 28
+                   = 1028
+```
+
+**Address of `a[2][3]` = 1028**
 
 **Note:** Row-major is the default in most languages, while column-major is used in certain languages like Fortran.
 
+### Q1.
+Let A be a two-dimensional array declared as follows:
+
+```
+A: array [1 ... 10] [1 ... 15] of integer;
+```
+
+Assuming that each integer takes one memory location, the array is stored in row-major order, and the first element of the array is stored at location 100, what is the address of the element `a[i][j]`?
+
+- **(A)** 15i + j + 84 (Answer)
+- **(B)** 15j + i + 84
+- **(C)** 10i + j + 89
+- **(D)** 10j + i + 89
+
+---
+
+#### Solution:
+
+**Step-by-Step Solution:**
+
+1. **Identify Given Information:**
+   - **Array Declaration**: `A[1...10][1...15]`
+   - **Memory Location of First Element** (`B`): `100`
+   - **Element Size (`W`)**: `1` (since each integer takes one memory location)
+   - **Row Major Order**
+
+2. **Bounds:**
+   - **Row Lower Bound (`L1`)**: `1`
+   - **Row Upper Bound (`U1`)**: `10`
+   - **Column Lower Bound (`L2`)**: `1`
+   - **Column Upper Bound (`U2`)**: `15`
+
+3. **Row Major Address Formula:**
+   ```
+   Address of a[i][j] = B + W * [(U2 - L2 + 1) * (i - L1) + (j - L2)]
+   ```
+
+4. **Plugging in the Values:**
+   - **Base Address (`B`)**: `100`
+   - **Element Size (`W`)**: `1`
+   - **Number of Columns (`U2 - L2 + 1`)**: `15 - 1 + 1 = 15`
+   - **Row Position (`i - L1`)**: `i - 1`
+   - **Column Position (`j - L2`)**: `j - 1`
+
+   **Address Calculation:**
+   ```
+   Address of a[i][j] = 100 + 1 * [15 * (i - 1) + (j - 1)]
+                      = 100 + [15i - 15 + j - 1]
+                      = 100 + 15i + j - 16
+                      = 15i + j + 84
+   ```
+
+5. **Final Answer:**
+   - The correct option is:
+   - **(A) 15i + j + 84**
+
+---
+
+Thus, the address of the element `a[i][j]` is given by **15i + j + 84**.
+
+### Q2.
+### **Question:**
+Two matrices `M1` and `M2` are to be stored in arrays `A` and `B` respectively. Each array can be stored either in row-major or column-major order in contiguous memory locations. The time complexity of an algorithm to compute `M1 × M2` will be:
+
+- **(A)** best if `A` is in row-major, and `B` is in column-major order.
+- **(B)** best if both are in row-major order.
+- **(C)** best if both are in column-major order.
+- **(D)** independent of the storage scheme. (Answer)
+
+The reason for this is that the **time complexity** of multiplying two matrices `M1` and `M2` is fundamentally independent of how the matrices are stored—whether in row-major or column-major order. The number of operations required to multiply the matrices remains the same regardless of the storage format. While the performance (in terms of cache efficiency) might vary with different storage schemes, **time complexity analysis** focuses on the number of operations rather than the low-level memory access patterns. Therefore, the correct answer is that the time complexity is not dependent on whether the matrices are stored in row-major or column-major order, making the answer **independent of the storage scheme**.
+
+If the question had asked about the **best performance** (rather than complexity), then storing `M1` in row-major order and `M2` in column-major order would provide a performance boost due to better cache usage, which is where the confusion might come from.
+
+### Q3.
+An `n x n` array `v` is defined as follows:
+
+```
+v[i, j] = i - j for all i, j, 1 <= i <= n, 1 <= j <= n
+```
+
+The sum of the elements of the array `v` is:
+
+- **(A)** 0
+- **(B)** n - 1
+- **(C)** n² - 3n + 2
+- **(D)** n² (n + 1) / 2
+
+**Step-by-Step Analysis:**
+
+1. **Definition of Array Elements:**
+   - Each element of the `n x n` array `v` is defined as `v[i, j] = i - j`.
+   - This means that for any element `v[i, j]`, the value is obtained by subtracting column index `j` from row index `i`.
+
+2. **Array Pattern and Summation:**
+   - Let's consider the structure of the matrix for better understanding:
+   - For an `n x n` array, if we examine the values, we see that:
+     - When `i = j`, `v[i, j] = 0`.
+     - When `i > j`, `v[i, j]` is positive.
+     - When `i < j`, `v[i, j]` is negative.
+   - The overall pattern of the matrix is symmetric with values balancing out.
+
+3. **Observing the Sum:**
+   - Let’s consider the contribution of each element. Since `v[i, j] = i - j`, we have negative values below the main diagonal and positive values above the main diagonal.
+   - If we consider the entire matrix, every positive value above the diagonal is exactly canceled out by a corresponding negative value below the diagonal.
+
+4. **Conclusion:**
+   - Therefore, the **sum of all elements of the array** is `0`.
+
+**Final Answer:**
+- **(A) 0**
+
+### Q4. GATE - 2015, 2 Marks
+A Young tableau is a 2D array of integers increasing from left to right and from top to bottom. Any unfilled entries are marked with `∞`, and hence there cannot be any entry to the right of or below `∞`. The following Young tableau consists of unique entries:
+
+```
+1    2     5    14
+3    4     6    23
+10   12   18    25
+31   ∞    ∞     ∞
+```
+
+When an element is removed from a Young tableau, other elements should be moved into its place so that the resulting table is still a Young tableau (unfilled entries may be filled in with `∞`). The minimum number of entries (other than `1`) to be shifted, to remove `1` from the given Young tableau is:
+
+- **(A)** 2
+- **(B)** 5 (Answer)
+- **(C)** 6
+- **(D)** 18
+
+**Understanding Young Tableau:**
+- A Young tableau is a special type of matrix where elements are sorted row-wise from left to right and column-wise from top to bottom.
+- Any unfilled cell is represented by `∞` which always follows the filled entries in both row and column directions.
+
+**Removing an Element:**
+- The problem requires removing `1` from the tableau and maintaining the Young tableau property.
+- After removing an element, it is necessary to replace it with an appropriate element from either the next row or column so that the tableau retains its order properties.
+
+**Step-by-Step Process:**
+1. **Remove `1`**:
+   - We need to fill the vacant position at `v[1][1]` (i.e., the position of `1`).
+  
+2. **Shifting Elements to Maintain Order**:
+   - The general rule for filling the empty spot in a Young tableau is to either move the element from the right or from below.
+   - In this case, `2` (from the first row and second column) will replace `1`.
+   - After placing `2` in the first spot, we need to maintain the tableau property for the rest of the cells.
+  
+3. **Subsequent Shifts**:
+   - `5` will move to the place of `2`.
+   - `14` will move to the place of `5`.
+   - This shifting continues until the vacant spot reaches the position of `∞`.
+
+**Minimum Number of Shifts:**
+- The number of elements that need to be shifted to maintain the Young tableau property is **5**.
+
+Thus, the correct answer is:
+
+**(B) 5**.
+
+### Q5. GATE 2014
+Let `A` be a square matrix of size `n x n`. Consider the following program. What is the expected output?
+
+``` 
+C = 100
+for i = 1 to n do
+{
+    for j = 1 to n do
+    {
+        Temp = A[i][j]
+        A[i][j] = A[j][i]
+        A[j][i] = Temp
+    }
+}
+for i = 1 to n do
+    for j = 1 to n do
+        Output(A[i][j])
+```
+
+**Options:**
+
+- **(A)** The matrix `A` itself
+- **(B)** Transpose of matrix `A`
+- **(C)** Adding 100 to the upper diagonal elements and subtracting 100 from diagonal elements of `A`
+- **(D)** None of the above
+
+#### Step-by-Step Analysis of the Code:
+
+1. **Understanding the Swapping Logic:**
+   - The given code swaps the elements of matrix `A` with itself.
+   - Specifically, it swaps `A[i][j]` with `A[j][i]` for each element, effectively attempting to transpose the matrix.
+   
+2. **Nested Loop Behavior:**
+   - The first `for` loop runs from `i = 1 to n`.
+   - Inside the first loop, there is a second loop running from `j = 1 to n`.
+   - If we look closely, when `i` equals `j`, we are swapping diagonal elements (`A[i][j]` with `A[j][i]`), which does not change anything.
+   - Moreover, since the outer loop runs for all values from `i = 1 to n` and the inner loop also runs for all values from `j = 1 to n`, every element is swapped **twice**.
+
+3. **Impact of Double Swapping:**
+   - For each element, the swap operation is executed twice:
+     - The first swap exchanges `A[i][j]` with `A[j][i]`.
+     - The second swap restores the original values since it swaps back.
+   - Therefore, the net effect of this double swap is **no change** to the original matrix.
+
+4. **Conclusion:**
+   - Since each element is swapped twice, the matrix remains unchanged after both loops complete.
+   - Thus, the expected output is the original matrix `A`.
+
+**Correct Answer:**
+- **(A) The matrix A itself**
+
+### Q6. GATE - 2014, 1 Mark
+Suppose you are given an array `s[1...n]` and a procedure `reverse(s, i, j)` which reverses the order of elements between positions `i` and `j` (both inclusive). What does the following sequence do, where `1 < k < n`?
+
+```
+reverse(s, 1, k);
+reverse(s, k + 1, n);
+reverse(s, 1, n);
+```
+
+**Options:**
+- **(A)** Rotates `s` left by `k` positions (Answer)
+- **(B)** Leaves `s` unchanged
+- **(C)** Reverses all elements of `s`
+- **(D)** None of the above
+
+**Correct Answer:**
+- **(A) Rotates `s` left by `k` positions**
+
+**Explanation with Example (k = 3, Array Size n = 8):**
+
+Consider an array `s = [a, b, c, d, e, f, g, h]` and `k = 3`.
+
+**Step 1:** Reverse the first `k` elements (`reverse(s, 1, k)`):
+- `s` becomes: `[c, b, a, d, e, f, g, h]`
+
+**Step 2:** Reverse the elements from `k + 1` to `n` (`reverse(s, k + 1, n)`):
+- `s` becomes: `[c, b, a, h, g, f, e, d]`
+
+**Step 3:** Reverse the entire array (`reverse(s, 1, n)`):
+- `s` becomes: `[d, e, f, g, h, a, b, c]`
+
+**Result:**
+The sequence of operations effectively **rotates the array `s` to the left by `k` positions**.
+
+This rotation is equivalent to shifting each element to the left by `k` positions and wrapping the initial `k` elements around to the end. The updated output shows that the correct answer is **Option A**, which rotates the array left by `k` positions.
+
+
 https://www.youtube.com/watch?v=2o2vX0ZqQ_Y&t=2451s
-1:02
+1:40
 
 # Stack
 # Queue
