--- a/Concepts/1. Programming, DSA/2. Notes. Data Structures.md
+++ b/Concepts/1. Programming, DSA/2. Notes. Data Structures.md
@@ -472,11 +472,130 @@ The sequence of operations effectively **rotates the array `s` to the left by `k
 
 This rotation is equivalent to shifting each element to the left by `k` positions and wrapping the initial `k` elements around to the end. The updated output shows that the correct answer is **Option A**, which rotates the array left by `k` positions.
 
+# Stack (LIFO)
+A **stack** is an **abstract data structure** that manages a collection of elements with strict ordering rules. Specifically, stacks operate under the **Last In, First Out** (LIFO) principle, where the last element added is the first to be removed. Think of it like a stack of plates: you add plates to the top and remove them from the top as well.
+
+Stacks are particularly useful in scenarios where you need temporary storage and simple, linear access. They're used in memory management, parsing expressions, and in implementing recursive functions in programming languages, as each function call and return is handled using a stack in the call stack of an operating system.
+
+## Main Properties of Stack for GATE Exam
+
+1. **LIFO Structure**: Only the top element is accessible, and only the last added element can be removed first.
+2. **Basic Operations**: Key operations include:
+   - **Push** (add an element to the top),
+   - **Pop** (remove the top element),
+   - **Peek** or **Top** (view the top element without removing it).
+3. **Overflow and Underflow**: Important edge cases in stack operations:
+   - **Overflow** occurs when trying to push onto a full stack.
+   - **Underflow** happens when trying to pop from an empty stack.
+4. **Memory Management**: Stacks are used by operating systems to manage function calls, return addresses, and local variables during program execution.
+5. **Applications in Algorithms**:
+   - **Expression Parsing and Evaluation**: Stacks are used to evaluate expressions and convert infix expressions to postfix or prefix.
+   - **Backtracking Algorithms**: For instance, solving mazes or puzzles where you need to backtrack steps.
+   - **DFS (Depth-First Search)**: DFS uses a stack to keep track of the vertices to be explored in graph traversal.
+### 1. Array Implementation of Stack
+In an array-based implementation:
+- **Structure**: The stack is implemented using a fixed-size array, which has a predefined capacity. A variable `top` is used to track the index of the top element in the stack.
+- **Operations**:
+  - **Push**: Adds an element at the position pointed to by `top` and then increments `top`. If `top` exceeds the maximum array size, a **stack overflow** condition occurs.
+  - **Pop**: Decrements `top` and returns the element at that position. If `top` is -1 (empty stack), it triggers a **stack underflow**.
+  - **Peek**: Returns the element at the current `top` without modifying the stack.
+- **Advantages**: Simple to implement with constant time complexity \(O(1)\) for all operations.
+- **Disadvantages**: The stack size is fixed, so memory allocation may be inefficient if the stack is not fully utilized, and resizing is not dynamic【29†source】【30†source】.
+
+### 2. Linked List Implementation of Stack
+In a linked list-based implementation:
+- **Structure**: The stack is represented as a singly linked list where each node contains data and a pointer to the next node. The `top` pointer points to the head of the list (most recent element).
+- **Operations**:
+  - **Push**: A new node is created, its next pointer is set to the current `top`, and then `top` is updated to this new node. This allows dynamic resizing, avoiding overflow.
+  - **Pop**: The node at `top` is removed, and `top` is updated to the next node. Underflow occurs if `top` is `null`.
+  - **Peek**: Accesses the data in the node at `top`.
+- **Advantages**: Dynamic memory allocation means no fixed size; the stack grows and shrinks as needed without overflow (as long as memory is available).
+- **Disadvantages**: Slightly more complex due to pointer manipulation, and operations require additional memory to store pointers【21†source】【29†source】.
+
+### Comparison Summary for GATE
+- **Efficiency**: Both implementations offer \(O(1)\) complexity for push, pop, and peek operations.
+- **Memory Management**: Array-based stacks are limited by fixed capacity, while linked list-based stacks can dynamically adjust in size.
+- **Use Case**: Arrays are simpler for smaller, fixed-size stacks, while linked lists are suitable for scenarios where stack size may vary dynamically.
+
+### Q1. GATE 1991 Question (2 Marks)
+Choose the correct alternatives (more than one may be correct) and write the corresponding letters only. The following sequence of operations is performed on a stack:
+
+- PUSH (10), PUSH (20), POP, PUSH (10), PUSH (20), POP, POP, POP, PUSH (20), POP.
+
+The sequence of values popped out is?
+
+**Options:**
+- a) 20, 10, 20, 10, 20
+- b) 20, 20, 10, 10, 20
+- c) 10, 20, 20, 10, 20
+- d) 20, 20, 10, 20, 10
+
+Following the operations step-by-step:
+1. PUSH 10 → Stack: [10]
+2. PUSH 20 → Stack: [10, 20]
+3. POP → Remove 20. Sequence: [20]
+4. PUSH 10 → Stack: [10, 10]
+5. PUSH 20 → Stack: [10, 10, 20]
+6. POP → Remove 20. Sequence: [20, 20]
+7. POP → Remove 10. Sequence: [20, 20, 10]
+8. POP → Remove 10. Sequence: [20, 20, 10, 10]
+9. PUSH 20 → Stack: [20]
+10. POP → Remove 20. Sequence: [20, 20, 10, 10, 20]
+
+**Answer:** The correct sequence is **(b) 20, 20, 10, 10, 20**.
+### Q2.
+1. **(A)** In push operation, if new nodes are inserted at the beginning of the linked list, then in pop operation, nodes must be removed from the end.
+2. **(B)** In push operation, if new nodes are inserted at the end, then in pop operation, nodes must be removed from the beginning.
+3. **(C)** Both of the above.
+4. **(D)** None of the above.
+
+#### Thought Process:
+In a **stack implementation using a linked list**, the primary rule of stack operations (Last In, First Out or LIFO) should be maintained:
+- The most recent element added (pushed) is the first to be removed (popped).
+- To achieve this efficiently, we typically add and remove elements from the same end of the list.
+
+**Analysis of Each Statement**:
+- **Statement (A)**: This suggests adding nodes at the beginning and removing from the end, which contradicts the LIFO property of a stack, as elements added last would not be removed first.
+- **Statement (B)**: This implies adding nodes at the end and removing from the beginning, which follows a First In, First Out (FIFO) order, more like a queue, not a stack.
+
+Both statements **(A)** and **(B)** describe behaviors contrary to a stack’s LIFO nature, making them incorrect. In a proper linked list stack implementation, we should add and remove nodes from the **same end** (typically the beginning for efficiency) to maintain LIFO.
+
+#### Conclusion:
+The correct answer is **(D) None of the above**, as neither (A) nor (B) accurately represents a linked list implementation of a stack that follows LIFO. 
+
+This analysis aligns with stack properties and linked list implementations discussed in data structure references, which recommend adding and removing nodes from the head to maintain efficient LIFO operations.
+
+### Q3.
+
+**GATE 2004 Question (2 Marks)**
+
+**Question:**
+A single array $A[1 \ldots \text{MAXSIZE}]$ is used to implement two stacks. The two stacks grow from opposite ends of the array. Variables `top_1` and `top_2` (`top_1 < top_2`) point to the topmost element of each stack. To use the space efficiently, the condition for "stack full" is:
+
+**Options:**
+- (A) $\text{top}_1 = \frac{\text{MAXSIZE}}{2}$ and $\text{top}_2 = \frac{\text{MAXSIZE}}{2} + 1$
+- (B) $\text{top}_1 + \text{top}_2 = \text{MAXSIZE}$
+- (C) $(\text{top}_1 = \frac{\text{MAXSIZE}}{2})$ or $(\text{top}_2 = \text{MAXSIZE})$
+- (D) $\text{top}_1 = \text{top}_2 - 1$
+
+When implementing two stacks in a single array growing from opposite ends, the **stack full** condition arises when the two stacks meet in the middle, leaving no additional space between them.
+
+1. **Stack 1** grows from the beginning of the array (index 1) towards the center.
+2. **Stack 2** grows from the end of the array (index $\text{MAXSIZE}$) towards the center.
+
+The array is considered **full** when $\text{top}_1$ is immediately before $\text{top}_2$, i.e.,
+$$
+\text{top}_1 = \text{top}_2 - 1
+$$
+
+This condition ensures maximum usage of the array space without overlap between the two stacks.
+
+**Correct Answer:**  
+**(D) $\text{top}_1 = \text{top}_2 - 1$**
 
 https://www.youtube.com/watch?v=2o2vX0ZqQ_Y&t=2451s
-1:40
+2:11
 
-# Stack
 # Queue
 # Linked List
 # Tree
